BlueToolTestforJoy/blue_dir/include/Delphi/HidDfuAPI.pas

{ HidDfuAPI.pas : Declares the DLL functions for Delpi. }
{ Generated by C:\work_bluesuite_2_5\p4\common\hosttools\bluesuite_2_5\prodtest\scripts\extract_tt_api.pl from HidDfu.h;  at 03/02/14 - 11:13:42 }

unit HidDfuAPI;

interface

function hidDfuGetVersion(var major: Word; var minor: Word; var release: Word; var build: Word): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuConnect( vid: Word;  pid: Word;  usage: Word;  usagePage: Word): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuDisconnect(): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuBackup( fileName: PChar): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuUpgrade( fileName: PChar): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuResetDevice(): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuGetProgress(): Byte; stdcall; external 'HidDfu.dll' ;
function hidDfuGetResult(): Integer; stdcall; external 'HidDfu.dll' ;
function hidDfuGetLastError(): PChar; stdcall; external 'HidDfu.dll' ;
function hidDfuSendCommand(var data: Byte;  length: Cardinal): Integer; stdcall; external 'HidDfu.dll' ;

implementation

end.
